syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shanvin.project.api";
option java_outer_classname = "RPCServiceProto";

service SayHiService {
    rpc sayHi (SayHiRequest) returns (SayHiResponse);
}

message SayHiRequest {
    string name = 1;
}

message SayHiResponse {
    string message = 1;
}